k8s/argo-rollouts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollsafe-ingress
  namespace: rollsafe
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: rollsafe.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rollsafe-stable
                port:
                  number: 80
